--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <a href="audio.html">audio</a>
         <a href="form.html">forms</a>
         <a href="table.html">table</a>
+        <a href="font.html">font</a>
     </body>
 </html>
