--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <a href="form.html">forms</a>
         <a href="table.html">table</a>
         <a href="font.html">font</a>
+        <a href="squr.html">rectangle</a>
     </body>
 </html>
