--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <a href="table.html">table</a>
         <a href="font.html">font</a>
         <a href="squr.html">rectangle</a>
+        <a href="image.html">image</a>
     </body>
 </html>
