--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <a href="font.html">font</a>
         <a href="squr.html">rectangle</a>
         <a href="image.html">image</a>
+        <a href="navbar.html">navigation bar</a>
     </body>
 </html>
