--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <a href="font.html">font</a>
         <a href="squr.html">rectangle</a>
         <a href="image.html">image</a>
+        <a href="resume.html">resume</a>
         <a href="navbar.html">navigation bar</a>
+        <a href="formregister.html">registration form</a>
+        <a href="formlogin.html">login form</a>
     </body>
 </html>
